--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lvhuihao</title>
+    <script src="./project/stepGame/web-mobile/index.js"></script>
 </head>
 <body>
     hello world!
